Fixing Spacings and Starting Settings

--- a/styles/main.css
+++ b/styles/main.css
@@ -13,7 +13,7 @@ body{
 .kronosTimer{
   position: absolute;
   left: 3.5%;
-  top: 15%;
+  top: 19%;
   zoom: 1.35;
   -moz-transform: scale(1.25);
 }
@@ -33,7 +33,7 @@ body{
   color: white;
   text-align: right;
   position: absolute;
-  top: 30%;
+  top: 35%;
   right: 2%;
   width: 30%
 }
@@ -44,13 +44,14 @@ body{
   color: white;
   text-align: right;
   position: absolute;
-  top: 15%;
+  top: 17%;
   right: 2%;
+
 }
 
 .TodoListClass{
 position: absolute;
-top: 49%;
+top: 55%;
 right: -3%;
 zoom: 0.75;
 -moz-transform: scale(0.75);
@@ -59,7 +60,7 @@ zoom: 0.75;
 #clock{
 text-align: right;
 position: absolute;
-top: 20%;
+top: 22%;
 right: 2%;
 color: #ffff;
 font-size: 100%;
